--- a/index.html
+++ b/index.html
@@ -84,175 +84,173 @@
            </div>
       </div> -->
 
-<div class="main3">
-      <div class="container">
-        <div class="image">
-          <img
-            src="https://storage.googleapis.com/cms-storage-bucket/community-get-involved.c6d00c92ea8465787105.png"
-            alt="Community get involved"
-          />
+      <div class="main3">
+        <div class="container">
+          <div class="image">
+            <img
+              src="https://storage.googleapis.com/cms-storage-bucket/community-get-involved.c6d00c92ea8465787105.png"
+              alt="Community get involved"
+            />
+          </div>
+          <div class="text">
+            <h3>Community</h3>
+            <h1>Get involved</h1>
+            <p>
+              Connect with Flutter developers around the world, find answers,
+              and contribute to the framework in our welcoming community spaces.
+            </p>
+            <span class="btns">
+              <button>Join the community</button>
+              <span
+                >More about flutter culture <i class="ri-arrow-right-line"></i
+              ></span>
+            </span>
+          </div>
         </div>
-        <div class="text">
-          <h3>Community</h3>
-          <h1>Get involved</h1>
+      </div>
+      <div class="main4">
+        <div class="container">
+          <div class="image">
+            <img
+              src="https://storage.googleapis.com/cms-storage-bucket/consultants.5ed8ae4a516b4433fc75.png"
+              alt="Ecosystem Consultants"
+            />
+          </div>
+          <div class="text">
+            <h3>Consultants</h3>
+            <h1>Find a Flutter consultant</h1>
+            <p>
+              Find trusted Flutter partners. We vet the partners listed in the
+              directory to verify their record of successful Flutter projects, a
+              sufficient number of skilled developers on staff, and their
+              commitment to growing the Flutter community.
+            </p>
+            <span class="btns">
+              <button>Find Consultant</button>
+              <span
+                >More about flutter culture <i class="ri-arrow-right-line"></i
+              ></span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="main5">
+        <div class="container">
+          <div class="image">
+            <img
+              src="https://storage.googleapis.com/cms-storage-bucket/everyone-is-invited.6f183a9db312d0e1b535.png"
+              alt="Everyone is invited"
+            />
+          </div>
+          <div class="text">
+            <h3>Events</h3>
+            <h1>Everyone is invited</h1>
+            <p>
+              View upcoming events and see all of the latest talks and
+              announcements from previous events.
+            </p>
+            <span class="btns">
+              <button>Join the community</button>
+              <span
+                >More about flutter culture <i class="ri-arrow-right-line"></i
+              ></span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="main6">
+        <div class="container">
+          <div class="image">
+            <img
+              src="https://storage.googleapis.com/cms-storage-bucket/packages-integrations.9e16544e02c158492997.png"
+              alt="Packages and integrations"
+            />
+          </div>
+          <div class="text">
+            <h3>Community</h3>
+            <h1>Get involved</h1>
+            <p>
+              Connect with Flutter developers around the world, find answers,
+              and contribute to the framework in our welcoming community spaces.
+            </p>
+            <span class="btns">
+              <button>Join the community</button>
+              <span
+                >More about flutter culture <i class="ri-arrow-right-line"></i
+              ></span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="main7">
+        <div class="container">
+          <h1>Get started</h1>
+          <p>Instant access to the power of the Flutter framework</p>
+          <div class="btn-container">
+            <button class="first">Install</button>
+            <button class="second">
+              Read the docs<i class="ri-arrow-right-line"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="image">
+            <img
+              x-show="!darkMode"
+              src="https://storage.googleapis.com/cms-storage-bucket/flutter-logo.6a07d8a62f4308d2b854.svg"
+              width="154"
+              alt="Flutter"
+            />
+          </div>
+          <div class="allBlocks">
+
+            
+            <div class="blocks">
+              <h3>About Flutter</h3>
+              <p>Careers</p>
+              <p>News</p>
+              <p>Brand</p>
+              <p>Culture</p>
+            </div>
+            <div class="blocks">
+              <h3>Learn Flutter</h3>
+              <p>Learning Journey</p>
+              <p>Codelabs</p>
+              <p>Samples</p>
+              <p>Cookbook</p>
+            </div>
+            <div class="blocks">
+              <h3>Multi-Platform</h3>
+              <p>Mobile</p>
+              <p>Web</p>
+              <p>Embedded</p>
+              <p>iOS</p>
+            </div>
+          </div>
+        </div>
+        <div class="icons">
+          <i class="ri-youtube-fill"></i>
+          <i class="ri-twitter-x-line"></i>
+          <i class="ri-github-fill"></i>
+          <i class="ri-medium-fill"></i>
+          <i class="ri-projector-2-fill"></i>
+          <i class="ri-linkedin-box-fill"></i>
+        </div>
+        <div class="terms">
           <p>
-            Connect with Flutter developers around the world, find answers, and
-            contribute to the framework in our welcoming community spaces.
+            Except as otherwise noted, this work is licensed under a Creative
+            Commons Attribution 4.0 International License, and code samples are
+            licensed under the BSD License.
           </p>
-          <span class="btns">
-            <button>Join the community</button>
-            <span
-              >More about flutter culture <i class="ri-arrow-right-line"></i
-            ></span>
+          <span>
+            <p>Terms</p>
+            <p>Privacy</p>
+            <p>Security</p>
           </span>
         </div>
-      </div>
-    </div>
-    <div class="main4">
-      <div class="container">
-        <div class="image">
-          <img
-            src="https://storage.googleapis.com/cms-storage-bucket/consultants.5ed8ae4a516b4433fc75.png"
-            alt="Ecosystem Consultants"
-          />
-        </div>
-        <div class="text">
-          <h3>Consultants</h3>
-          <h1>Find a Flutter consultant</h1>
-          <p>
-            Find trusted Flutter partners. We vet the partners listed in the
-            directory to verify their record of successful Flutter projects, a
-            sufficient number of skilled developers on staff, and their
-            commitment to growing the Flutter community.
-          </p>
-          <span class="btns">
-            <button>Find Consultant</button>
-            <span
-              >More about flutter culture <i class="ri-arrow-right-line"></i
-            ></span>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="main5">
-      <div class="container">
-        <div class="image">
-          <img
-            src="https://storage.googleapis.com/cms-storage-bucket/everyone-is-invited.6f183a9db312d0e1b535.png"
-            alt="Everyone is invited"
-          />
-        </div>
-        <div class="text">
-          <h3>Events</h3>
-          <h1>Everyone is invited</h1>
-          <p>
-            View upcoming events and see all of the latest talks and
-            announcements from previous events.
-          </p>
-          <span class="btns">
-            <button>Join the community</button>
-            <span
-              >More about flutter culture <i class="ri-arrow-right-line"></i
-            ></span>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="main6">
-      <div class="container">
-        <div class="image">
-          <img
-            src="https://storage.googleapis.com/cms-storage-bucket/packages-integrations.9e16544e02c158492997.png"
-            alt="Packages and integrations"
-          />
-        </div>
-        <div class="text">
-          <h3>Community</h3>
-          <h1>Get involved</h1>
-          <p>
-            Connect with Flutter developers around the world, find answers, and
-            contribute to the framework in our welcoming community spaces.
-          </p>
-          <span class="btns">
-            <button>Join the community</button>
-            <span
-              >More about flutter culture <i class="ri-arrow-right-line"></i
-            ></span>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="main7">
-      <div class="container">
-        <h1>Get started</h1>
-        <p>Instant access to the power of the Flutter framework</p>
-        <div class="btn-container">
-          <button class="first">Install</button>
-          <button class="second">
-            Read the docs<i class="ri-arrow-right-line"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <div class="container">
-        <div class="image">
-          <img
-            x-show="!darkMode"
-            src="https://storage.googleapis.com/cms-storage-bucket/flutter-logo.6a07d8a62f4308d2b854.svg"
-            width="154"
-            alt="Flutter"
-          />
-        </div>
-        <div class="blocks">
-          <h3>About Flutter</h3>
-          <p>Careers</p>
-          <p>News</p>
-          <p>Brand</p>
-          <p>Culture</p>
-        </div>
-        <div class="blocks">
-          <h3>Learn Flutter</h3>
-          <p>Learning Journey</p>
-          <p>Codelabs</p>
-          <p>Samples</p>
-          <p>Cookbook</p>
-        </div>
-        <div class="blocks">
-          <h3>Multi-Platform</h3>
-          <p>Mobile</p>
-          <p>Web</p>
-          <p>Embedded</p>
-          <p>iOS</p>
-        </div>
-      </div>
-      <div class="icons">
-        <i class="ri-youtube-fill"></i>
-        <i class="ri-twitter-x-line"></i>
-        <i class="ri-github-fill"></i>
-        <i class="ri-medium-fill"></i>
-        <i class="ri-projector-2-fill"></i>
-        <i class="ri-linkedin-box-fill"></i>
-      </div>
-      <div class="terms">
-        <p>
-          Except as otherwise noted, this work is licensed under a Creative
-          Commons Attribution 4.0 International License, and code samples are
-          licensed under the BSD License.
-        </p>
-        <span>
-          <p>Terms</p>
-          <p>Privacy</p>
-          <p>Security</p>
-        </span>
-      </div>
-    </footer>
-
-
-
-
-
-
+      </footer>
     </div>
   </body>
 </html>
